fix - home view - widen small preview to 100% on mobile

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -73,4 +73,8 @@ body {
   .preview-row {
     width: 100%;
   }
+
+  .small-preview {
+    min-width: 100%;
+  }
 }
